Stopped photo columns from being cut off. Turned "column" overflow-y to visible

--- a/src/styles/Home.module.css
+++ b/src/styles/Home.module.css
@@ -533,6 +533,7 @@
   .column {
     width: 75vw;
     margin-top: 20vh;
+    overflow-y: visible;
   }
   .columnImage {
     height: 25%;
